WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95684
DFG JIT doesn't work properly on ARM hardfp
https://bugs.webkit.org/show_bug.cgi?id=95684
Summary
DFG JIT doesn't work properly on ARM hardfp
Gabor Rapcsanyi
Reported
2012-09-03 06:09:26 PDT
ecma/Date/15.9.5.8.js jsc test is falling into infinite loop on ARM hardfp because of DFG JIT.
Attachments
proposed patch
(5.61 KB, patch)
2012-09-04 02:08 PDT
,
Gabor Rapcsanyi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Rapcsanyi
Comment 1
2012-09-04 02:08:14 PDT
Created
attachment 161990
[details]
proposed patch
Gabor Rapcsanyi
Comment 2
2012-09-05 00:54:03 PDT
Patch landed:
http://trac.webkit.org/changeset/127561
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug