DFG JIT doesn't work properly on ARM hardfp https://bugs.webkit.org/show_bug.cgi?id=95684

Reviewed by Filip Pizlo.

Add hardfp support to DFG JIT. The patch is created with the
help of Zoltan Herczeg.

Source/JavaScriptCore:

* dfg/DFGCCallHelpers.h:
(CCallHelpers):
(JSC::DFG::CCallHelpers::setupArguments):
* dfg/DFGFPRInfo.h:
(FPRInfo):
* dfg/DFGSpeculativeJIT.h:
(SpeculativeJIT):
(JSC::DFG::SpeculativeJIT::appendCallWithExceptionCheckSetResult):
(JSC::DFG::SpeculativeJIT::appendCallSetResult):

Source/WTF:

* wtf/Platform.h:



Canonical link: https://commits.webkit.org/113699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127561 268f45cc-cd09-0410-ab3c-d52691b4dbfc