Source/WTF/wtf/Platform.h
@@ -169,6 +169,10 @@
     || defined(_ARM_)
 #define WTF_CPU_ARM 1
 
+#if defined(__ARM_PCS_VFP)
+#define WTF_CPU_ARM_HARDFP 1
+#endif
+
 #if defined(__ARMEB__) || (COMPILER(RVCT) && defined(__BIG_ENDIAN))
 #define WTF_CPU_BIG_ENDIAN 1
 
